--- a/styles/style.css
+++ b/styles/style.css
@@ -242,4 +242,12 @@ input::placeholder {
   height: 100px;
   background-color: red;
   margin-bottom: 10px;
+}
+
+.hidden {
+  display: none;
+}
+
+#second-area {
+  z-index: 10;
 }/*# sourceMappingURL=style.css.map */
