--- a/styles/style.scss
+++ b/styles/style.scss
@@ -227,3 +227,11 @@ input {
   background-color: red;
   margin-bottom: 10px;
 }
+
+.hidden {
+  display: none;
+}
+
+#second-area {
+  z-index: 10;
+}
